--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,9 @@
 }
 
 svg {
-    margin: 2rem 0;
+    margin: 1rem 0;
     border: 1px solid #ccc; /*otherwise you can't see this part*/
+    background-color: #ffffff;
 }
 
 #tooltip {
